--- a/chat/.eslintrc.json
+++ b/chat/.eslintrc.json
@@ -7,7 +7,7 @@
         "eslint: recommended",
         "plugin:react/recommended",
         "plugin:react-hooks/recommended",
-        "plugin:jsx-ally/recommended",
+        "plugin:jsx-a11y/recommended",
         "plugin:import/recommended",
         "airbnb",
         "plugin:react/jsx-runtime",
