--- a/chat/package.json
+++ b/chat/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "date-fns": "^2.28.0",
+    "nanoid": "^4.0.0",
     "promise": "^8.1.0",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
@@ -20,6 +21,7 @@
     "react-scripts": "5.0.1",
     "react-use-promise": "^0.5.0",
     "redux": "^4.2.0",
+    "reselect": "^4.1.6",
     "sass": "^1.51.0",
     "web-vitals": "^2.1.4"
   },
